# scot

./: .gitignore  README.md  pyproject.toml
scot/: __init__.py  bm25.py  chunker.py  cli.py  client.py  config.py  daemon.py  db.py  display.py  embedder.py  git.py  indexer.py  protocol.py  search.py
tests/: __init__.py  conftest.py  test_bm25.py  test_chunker.py  test_config.py  test_db.py  test_display.py  test_embedder.py  test_git.py  test_protocol.py  test_search.py
